compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__strings__ascii_as_unicode_escape_sequence.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/strings.rs
assertion_line: 27
expression: "\npub fn y() -> String {\n  \"\\u{79}\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn y() -> String {
  "\u{79}"
}


----- COMPILED JAVASCRIPT
export function y() {
  return "\u{79}";
}
