compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__strings__case.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/strings.rs
assertion_line: 84
expression: "\npub fn go(a) {\n  case a {\n    \"\" -> 0\n    \"one\" -> 1\n    \"two\" -> 2\n    _ -> 3\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(a) {
  case a {
    "" -> 0
    "one" -> 1
    "two" -> 2
    _ -> 3
  }
}


----- COMPILED JAVASCRIPT
export function go(a) {
  if (a === "") {
    return 0;
  } else if (a === "one") {
    return 1;
  } else if (a === "two") {
    return 2;
  } else {
    return 3;
  }
}
