compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__strings__const_concat.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/strings.rs
assertion_line: 230
expression: "\npub const cute = \"cute\"\npub const cute_bee = cute <> \"bee\"\n\npub fn main() {\n  cute_bee\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub const cute = "cute"
pub const cute_bee = cute <> "bee"

pub fn main() {
  cute_bee
}


----- COMPILED JAVASCRIPT
export const cute = "cute";

export const cute_bee = cute + "bee";

export function main() {
  return cute_bee;
}
