compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__strings__const_concat_multiple.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/strings.rs
assertion_line: 244
expression: "\npub const cute = \"cute\"\npub const cute_bee = cute <> \"bee\"\npub const cute_cute_bee_buzz = cute <> cute_bee <> \"buzz\"\n\npub fn main() {\n  cute_cute_bee_buzz\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub const cute = "cute"
pub const cute_bee = cute <> "bee"
pub const cute_cute_bee_buzz = cute <> cute_bee <> "buzz"

pub fn main() {
  cute_cute_bee_buzz
}


----- COMPILED JAVASCRIPT
export const cute = "cute";

export const cute_bee = cute + "bee";

export const cute_cute_bee_buzz = cute + cute_bee + "buzz";

export function main() {
  return cute_cute_bee_buzz;
}
