compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__strings__equality.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/strings.rs
assertion_line: 71
expression: "\npub fn go(a) {\n  a == \"ok\"\n  a != \"ok\"\n  a == a\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(a) {
  a == "ok"
  a != "ok"
  a == a
}


----- COMPILED JAVASCRIPT
export function go(a) {
  a === "ok";
  a !== "ok";
  return a === a;
}
