compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__strings__string_concat.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/strings.rs
assertion_line: 100
expression: "\npub fn go() {\n  \"Hello, \" <> \"Joe\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  "Hello, " <> "Joe"
}


----- COMPILED JAVASCRIPT
export function go() {
  return "Hello, " + "Joe";
}
