compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__strings__string_patterns.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/strings.rs
assertion_line: 60
expression: "\npub fn go(x) {\n  let assert \"Hello\" = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert "Hello" = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  if (!(x === "Hello")) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 40, pattern_start: 29, pattern_end: 36 }
    )
  }
  return x;
}
