compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__strings__string_prefix_assignment_with_multiple_subjects.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/strings.rs
assertion_line: 216
expression: "\npub fn go(x) {\n  case x {\n    \"1\" as prefix <> _ | \"11\" as prefix <> _ -> prefix\n    _ -> \"Unknown\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "1" as prefix <> _ | "11" as prefix <> _ -> prefix
    _ -> "Unknown"
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.startsWith("1")) {
    let prefix = "1";
    return prefix;
  } else {
    return "Unknown";
  }
}
